--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -10,7 +10,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                <a href="#">DSC 680 Course Projects</a>
+                              DSC 680 Course Projects
                             </div>
                         </div>
                     </div>
