--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -7,7 +7,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                School Work
                             </div>
                             <div class="project-name">
                               DSC 680 Course Projects
@@ -25,7 +25,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Work in Progress
                             </div>
                         </div>
                     </div>
@@ -40,7 +40,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Work in Progress
                             </div>
                         </div>
                     </div>
@@ -55,7 +55,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Work in Progress
                             </div>
                         </div>
                     </div>
@@ -70,7 +70,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Work in Progress
                             </div>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Work in Progress
                             </div>
                         </div>
                     </div>
