--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,8 @@
         <div class="header-content-inner">
             <h1>Michael Gonzalez's Data Science Portfolio</h1>
             <hr>
-            <p>This is the portfolio that will showcase completed projects for DSC 680.</p>
+            <p>This is the portfolio that will showcase completed projects from Bellevue University's Data Science course. 
+                This portfolio will also display a clear range of my progress from the beginning to the end of this course.</p> 
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
