--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -2,12 +2,13 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Thanks for visiting my portfolio!</h2>
+                <h2 class="section-heading">About Me</h2>
                 <hr class="light">
-                <p class="text-faded">My professinal background has been in Graphic Design and Front end development, which this seems to be an interesting path
-                    way to this career choice. I have always been interested in creating visualizations that can convey messages to people of all ages.
-                    With my new focus on data science, I can utilize my gained skills from Graphic Design and Front end development to create works that can be
-                    used a part of a great storytelling. I have a new fondness for this career and I am excited to gain more expereince in this career field.</p>
+                <p class="text-faded">Thanks for visiting my portfolio! My professinal background has been in Graphic Design and Front end development,
+                    which this seems to be an interesting pathway to this career choice. I have always been interested in creating visualizations that can convey
+                    messages to people of all ages. With my new focus on data science, I can utilize my gained skills from Graphic Design and Front end development 
+                    to create works that can be used a part of a great storytelling. I have a new fondness for this career and I am excited to gain more expereince 
+                    in this career field.</p>
                 <!--<a href="#" class="btn btn-default btn-xl">Get Started!</a>-->
             </div>
         </div>
