--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -17,6 +17,66 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
+                <a href="https://github.com/micgonzalez/DSC-680-Fall-2020-Portfolio-Projects" class="portfolio-box">
+                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                School Work
+                            </div>
+                            <div class="project-name">
+                              DSC 680 Course Projects
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="https://github.com/micgonzalez/DSC-680-Fall-2020-Portfolio-Projects" class="portfolio-box">
+                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                School Work
+                            </div>
+                            <div class="project-name">
+                              DSC 680 Course Projects
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="https://github.com/micgonzalez/DSC-680-Fall-2020-Portfolio-Projects" class="portfolio-box">
+                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                School Work
+                            </div>
+                            <div class="project-name">
+                              DSC 680 Course Projects
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="https://github.com/micgonzalez/DSC-680-Fall-2020-Portfolio-Projects" class="portfolio-box">
+                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                School Work
+                            </div>
+                            <div class="project-name">
+                              DSC 680 Course Projects
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
                     <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
