--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,75 +2,120 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC-680-Fall-2020-Portfolio-Projects" class="portfolio-box">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                <a href="https://github.com/micgonzalez/DSC510_Final_Project_Weather_Python_Program_Winter_2018" class="portfolio-box">
+                    <img src="img/portfolio/1.png" class="img-responsive" alt="DSC 510 Weather Python Program">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 School Work
                             </div>
                             <div class="project-name">
-                              DSC 680 Course Projects
+                              DSC 510 Weather Python Program
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC-680-Fall-2020-Portfolio-Projects" class="portfolio-box">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                <a href="https://github.com/micgonzalez/DSC510_Chuck_Norris_Joke_Program_in_Python" class="portfolio-box">
+                    <img src="img/portfolio/2.png" class="img-responsive" alt="DSC 510 Chuck Norris Joke Python Program">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 School Work
                             </div>
                             <div class="project-name">
-                              DSC 680 Course Projects
+                              DSC 510 Chuck Norris Joke Python Program
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC-680-Fall-2020-Portfolio-Projects" class="portfolio-box">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                <a href="https://github.com/micgonzalez/DSC520_Final_Project_Data_Cleaning_in_R" class="portfolio-box">
+                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="DSC 520 Data Cleaning in R">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 School Work
                             </div>
                             <div class="project-name">
-                              DSC 680 Course Projects
+                              DSC 520 Data Cleaning in R
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC-680-Fall-2020-Portfolio-Projects" class="portfolio-box">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                <a href="https://github.com/micgonzalez/Creating-a-Spell-Checker-in-R-side-project" class="portfolio-box">
+                    <img src="img/portfolio/3.png" class="img-responsive" alt="Spell Checker in R Side Project">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                School Work
+                                Side Project
                             </div>
                             <div class="project-name">
-                              DSC 680 Course Projects
+                              Spell Checker in R 
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC-680-Fall-2020-Portfolio-Projects" class="portfolio-box">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                <a href="https://github.com/micgonzalez/Basic-Machine-Learning-in-R-side-project" class="portfolio-box">
+                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="Basic Machine Learning in R Side Project">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Side Project
+                            </div>
+                            <div class="project-name">
+                              Basic Machine Learning in R 
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="https://github.com/micgonzalez/DSC530_Final_Project_Summer_2019" class="portfolio-box">
+                    <img src="img/portfolio/6.png" class="img-responsive" alt="DSC 530 Data Exploratory and Analysis Final">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 School Work
                             </div>
                             <div class="project-name">
-                              DSC 680 Course Projects
+                               DSC 530 Data Exploratory and Analysis Final
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="https://github.com/micgonzalez/DSC540_Mid_Term_Project" class="portfolio-box">
+                    <img src="img/portfolio/5.png" class="img-responsive" alt="DSC 540 Data Transformation Mid Term Project">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                School Work
+                            </div>
+                            <div class="project-name">
+                                DSC 540 Data Transformation Mid Term Project
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_one" class="portfolio-box">
+                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="DSC 680 Project One">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                School Work
+                            </div>
+                            <div class="project-name">
+                                DSC 680 Project One
                             </div>
                         </div>
                     </div>
@@ -78,14 +123,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/5.jpg" class="img-responsive" alt="DSC 680 Project Two">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                School Work
                             </div>
                             <div class="project-name">
-                                Work in Progress
+                                DSC 680 Project Two
                             </div>
                         </div>
                     </div>
@@ -93,59 +138,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="DSC 680 Project Three">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                School Work
                             </div>
                             <div class="project-name">
-                                Work in Progress
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Work in Progress
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Work in Progress
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Work in Progress
+                                DSC 680 Project Three
                             </div>
                         </div>
                     </div>
