--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -63,7 +63,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/micgonzalez/Basic-Machine-Learning-in-R-side-project" class="portfolio-box">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="Basic Machine Learning in R Side Project">
+                    <img src="img/portfolio/4.png" class="img-responsive" alt="Basic Machine Learning in R Side Project">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
