--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">About Me</h2>
                 <hr class="light">
-                <p class="text-faded">Thanks for visiting my portfolio! My professinal background has been in Graphic Design and Front end development,
+                <p class="text-faded"><img src="https://www.w3schools.com/html/smiley.gif" alt="Smiley face" style="float:left;width:42px;height:42px;">Thanks for visiting my portfolio! My professinal background has been in Graphic Design and Front end development,
                     which this seems to be an interesting pathway to this career choice. I have always been interested in creating visualizations that can convey
                     messages to people of all ages. With my new focus on data science, I can utilize my gained skills from Graphic Design and Front end development 
                     to create works that can be used a part of a great storytelling. I have a new fondness for this career.</p>
