--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -11,6 +11,9 @@
                             </div>
                             <div class="project-name">
                               DSC 510 Weather Python Program
+                                <br>
+                              This project follows almost the same guidelines as the Chuck Norris joke program, 
+                              except it involved the knowledge to include the different measurements that are related to weather.   
                             </div>
                         </div>
                     </div>
