Adjusting test update of portfolio.html

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -12,8 +12,8 @@
                             <div class="project-name">
                               DSC 510 Weather Python Program
                                 <br>
-                              This project follows almost the same guidelines as the Chuck Norris joke program, 
-                              except it involved the knowledge to include the different measurements that are related to weather.   
+                                <br>
+                              This project follows almost the same guidelines as the Chuck Norris joke program.   
                             </div>
                         </div>
                     </div>
