Updating Portfolio.html

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -13,7 +13,7 @@
                               DSC 510 Weather Python Program
                                 <br>
                                 <br>
-                              This project follows almost the same guidelines as the Chuck Norris joke program.   
+                              Creating a fun and interesting way to provide weather information.   
                             </div>
                         </div>
                     </div>
@@ -29,6 +29,9 @@
                             </div>
                             <div class="project-name">
                               DSC 510 Chuck Norris Joke Python Program
+                                <br>
+                                <br>
+                              This program allows the user to request a Chuck Norris joke. 
                             </div>
                         </div>
                     </div>
@@ -44,6 +47,9 @@
                             </div>
                             <div class="project-name">
                               DSC 520 Data Cleaning in R
+                                <br>
+                                <br>
+                              This project was to display my data cleaning skills. 
                             </div>
                         </div>
                     </div>
@@ -58,7 +64,10 @@
                                 Side Project
                             </div>
                             <div class="project-name">
-                              Spell Checker in R 
+                              Spell Checker in R
+                                <br>
+                                <br>
+                              Creating a spelling corrector based on Peter Norvig’s article.
                             </div>
                         </div>
                     </div>
@@ -73,7 +82,10 @@
                                 Side Project
                             </div>
                             <div class="project-name">
-                              Basic Machine Learning in R 
+                              Basic Machine Learning in R
+                                <br>
+                                <br>
+                              Creating a spelling corrector based on Peter Norvig’s article.
                             </div>
                         </div>
                     </div>
@@ -89,6 +101,9 @@
                             </div>
                             <div class="project-name">
                                DSC 530 Data Exploratory and Analysis Final
+                                <br>
+                                <br>
+                              PowerPoint presentation outlining my EDA skills.
                             </div>
                         </div>
                     </div>
@@ -103,7 +118,10 @@
                                 School Work
                             </div>
                             <div class="project-name">
-                                DSC 540 Data Transformation Mid Term Project
+                              DSC 540 Data Transformation Mid Term Project
+                                <br>
+                                <br>
+                               Project displaying my data wrangling skills.
                             </div>
                         </div>
                     </div>
@@ -119,6 +137,9 @@
                             </div>
                             <div class="project-name">
                                 DSC 680 Project One
+                                <br>
+                                <br>
+                               Predicting heart disease in men and women.
                             </div>
                         </div>
                     </div>
@@ -134,6 +155,9 @@
                             </div>
                             <div class="project-name">
                                 DSC 680 Project Two
+                                <br>
+                                <br>
+                               Displaying the COVID-19 effects on Los Angeles County.
                             </div>
                         </div>
                     </div>
@@ -148,7 +172,9 @@
                                 School Work
                             </div>
                             <div class="project-name">
-                                DSC 680 Project Three
+                                <br>
+                                <br>
+                               Predicting earthquakes with machine learning.
                             </div>
                         </div>
                     </div>
