Updating Portfolio.html

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -85,7 +85,7 @@
                               Basic Machine Learning in R
                                 <br>
                                 <br>
-                              Creating a spelling corrector based on Peter Norvig’s article.
+                              Creating statistical models using linear regression.
                             </div>
                         </div>
                     </div>
