Updating the portfolio.html

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/micgonzalez/DSC520_Final_Project_Data_Cleaning_in_R" class="portfolio-box">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="DSC 520 Data Cleaning in R">
+                    <img src="img/portfolio/9.png" class="img-responsive" alt="DSC 520 Data Cleaning in R">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -129,7 +129,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_one" class="portfolio-box">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="DSC 680 Project One">
+                    <img src="img/portfolio/7.png" class="img-responsive" alt="DSC 680 Project One">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -147,7 +147,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/5.jpg" class="img-responsive" alt="DSC 680 Project Two">
+                    <img src="img/portfolio/8.png" class="img-responsive" alt="DSC 680 Project Two">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
