Updating links and text for portfolio.html

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -146,7 +146,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_two" class="portfolio-box">
                     <img src="img/portfolio/8.png" class="img-responsive" alt="DSC 680 Project Two">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -172,6 +172,7 @@
                                 School Work
                             </div>
                             <div class="project-name">
+                                DSC 680 Project Three
                                 <br>
                                 <br>
                                Predicting earthquakes with machine learning.
