--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,12 +6,12 @@
                 <hr class="primary">
                 <p>Do you think I'm a good fit for your team? If so, contact me and I will get back to you as soon as possible!</p>
             </div>
-        <div class="col-lg-2 col-lg-offset-2 text-center">
+        <!---<div class="col-lg-2 col-lg-offset-2 text-center">
             <a href="https://twitter.com/{{ site.twitter_username }}">
                 <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                 <p>{{ site.twitter_username }}</p>
             </a>
-        </div>
+        </div>--->
         <div class="col-lg-2 col-lg-offset-1 text-center">
             <a href="mailto:{{ site.email }}">
             <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
