Updating nav.html

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -23,6 +23,9 @@
                 <li>
                     <a class="page-scroll" href="#portfolio">Portfolio</a>
                 </li>
+                 <li>
+                    <a class="page-scroll" href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/blob/master/MICHAEL_GONZALEZ_INTERN_RESUME.pdf">Resume</a>
+                </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
