--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -164,8 +164,8 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="DSC 680 Project Three">
+                <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_three" class="portfolio-box">
+                    <img src="img/portfolio/3.png" class="img-responsive" alt="DSC 680 Project Three">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
