--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,7 +24,7 @@
                     <a class="page-scroll" href="#portfolio">Portfolio</a>
                 </li>
                  <li>
-                    <a class="page-scroll" href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/blob/master/MICHAEL_GONZALEZ_INTERN_RESUME.pdf" target="_blank">Resume</a>
+                    <!---<a class="page-scroll" href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/blob/master/MICHAEL_GONZALEZ_INTERN_RESUME.pdf" target="_blank">Resume</a>-->
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
