--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -181,6 +181,42 @@
                     </div>
                 </a>
             </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="https://github.com/micgonzalez/lucky-parking/tree/reddit-analysis/notebooks" class="portfolio-box">
+                    <img src="img/portfolio/11.png" class="img-responsive" alt="Lucky Parking">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Professional
+                            </div>
+                            <div class="project-name">
+                                Reddit Text Analysis
+                                <br>
+                                <br>
+                               Looking for insights from Reddit posts.
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="https://github.com/micgonzalez/Luigi-Data-Pipeline-with-Python" class="portfolio-box">
+                    <img src="img/portfolio/12.png" class="img-responsive" alt="DSC 680 Project Two">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                School Work
+                            </div>
+                            <div class="project-name">
+                                DSC 680 Project Two
+                                <br>
+                                <br>
+                               Displaying the COVID-19 effects on Los Angeles County.
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
 </section>
