--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -183,14 +183,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/micgonzalez/lucky-parking/tree/reddit-analysis/notebooks" class="portfolio-box">
-                    <img src="img/portfolio/11.png" class="img-responsive" alt="Lucky Parking">
+                    <img src="img/portfolio/11.png" class="img-responsive" alt="Lucky Parking's Reddit Text Analysis">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 Professional
                             </div>
                             <div class="project-name">
-                                Reddit Text Analysis
+                                Lucky Parking's Reddit Text Analysis
                                 <br>
                                 <br>
                                Looking for insights from Reddit posts.
@@ -200,18 +200,18 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/Luigi-Data-Pipeline-with-Python" class="portfolio-box">
-                    <img src="img/portfolio/12.png" class="img-responsive" alt="DSC 680 Project Two">
+                <a href="https://github.com/micgonzalez/MySQL-Database-Visualizations" class="portfolio-box">
+                    <img src="img/portfolio/12.png" class="img-responsive" alt="MySQL Database Visualizations">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                School Work
+                                Professional
                             </div>
                             <div class="project-name">
-                                DSC 680 Project Two
+                                MySQL Database Visualizations
                                 <br>
                                 <br>
-                               Displaying the COVID-19 effects on Los Angeles County.
+                               Pulling data from a remote database to create visualizations.
                             </div>
                         </div>
                     </div>
