--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -180,7 +180,7 @@
                         </div>
                     </div>
                 </a>
- 
+            </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/micgonzalez/DSC680-Fall-2020-Portfolio-Projects/tree/master/project_three" class="portfolio-box">
                     <img src="img/portfolio/10.png" class="img-responsive" alt="DSC 680 Project Three">
