--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -217,6 +217,8 @@
                     </div>
                 </a>
             </div>
+          </div>
+        </div>
         </div>
     </div>
 </section>
