--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,114 +2,6 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC510_Final_Project_Weather_Python_Program_Winter_2018" class="portfolio-box">
-                    <img src="img/portfolio/1.png" class="img-responsive" alt="DSC 510 Weather Python Program">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                School Work
-                            </div>
-                            <div class="project-name">
-                              DSC 510 Weather Python Program
-                                <br>
-                                <br>
-                              Creating a fun and interesting way to provide weather information.   
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC510_Chuck_Norris_Joke_Program_in_Python" class="portfolio-box">
-                    <img src="img/portfolio/2.png" class="img-responsive" alt="DSC 510 Chuck Norris Joke Python Program">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                School Work
-                            </div>
-                            <div class="project-name">
-                              DSC 510 Chuck Norris Joke Python Program
-                                <br>
-                                <br>
-                              This program allows the user to request a Chuck Norris joke. 
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC520_Final_Project_Data_Cleaning_in_R" class="portfolio-box">
-                    <img src="img/portfolio/9.png" class="img-responsive" alt="DSC 520 Data Cleaning in R">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                School Work
-                            </div>
-                            <div class="project-name">
-                              DSC 520 Data Cleaning in R
-                                <br>
-                                <br>
-                              This project was to display my data cleaning skills. 
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/Creating-a-Spell-Checker-in-R-side-project" class="portfolio-box">
-                    <img src="img/portfolio/3.png" class="img-responsive" alt="Spell Checker in R Side Project">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Side Project
-                            </div>
-                            <div class="project-name">
-                              Spell Checker in R
-                                <br>
-                                <br>
-                              Creating a spelling corrector based on Peter Norvig’s article.
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/Basic-Machine-Learning-in-R-side-project" class="portfolio-box">
-                    <img src="img/portfolio/4.png" class="img-responsive" alt="Basic Machine Learning in R Side Project">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Side Project
-                            </div>
-                            <div class="project-name">
-                              Basic Machine Learning in R
-                                <br>
-                                <br>
-                              Creating statistical models using linear regression.
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/DSC530_Final_Project_Summer_2019" class="portfolio-box">
-                    <img src="img/portfolio/6.png" class="img-responsive" alt="DSC 530 Data Exploratory and Analysis Final">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                School Work
-                            </div>
-                            <div class="project-name">
-                               DSC 530 Data Exploratory and Analysis Final
-                                <br>
-                                <br>
-                              PowerPoint presentation outlining my EDA skills.
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/micgonzalez/DSC540_Mid_Term_Project" class="portfolio-box">
                     <img src="img/portfolio/5.png" class="img-responsive" alt="DSC 540 Data Transformation Mid Term Project">
                     <div class="portfolio-box-caption">
@@ -121,7 +13,7 @@
                               DSC 540 Data Transformation Mid Term Project
                                 <br>
                                 <br>
-                               Project displaying my data wrangling skills.
+                               Project displaying my data wrangling skills. 
                             </div>
                         </div>
                     </div>
@@ -180,6 +72,61 @@
                         </div>
                     </div>
                 </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="https://github.com/micgonzalez/lucky-parking/tree/reddit-analysis/notebooks" class="portfolio-box">
+                    <img src="img/portfolio/11.png" class="img-responsive" alt="Lucky Parking's Reddit Text Analysis">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Professional
+                            </div>
+                            <div class="project-name">
+                                Lucky Parking's Reddit Text Analysis
+                                <br>
+                                <br>
+                               Looking for insights from Reddit posts.
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="https://github.com/micgonzalez/DSC530_Final_Project_Summer_2019" class="portfolio-box">
+                    <img src="img/portfolio/6.png" class="img-responsive" alt="DSC 530 Data Exploratory and Analysis Final">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                School Work
+                            </div>
+                            <div class="project-name">
+                               DSC 530 Data Exploratory and Analysis Final
+                                <br>
+                                <br>
+                              PowerPoint presentation outlining my EDA skills.
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="https://github.com/micgonzalez/MySQL-Database-Visualizations" class="portfolio-box">
+                    <img src="img/portfolio/12.png" class="img-responsive" alt="MySQL Database Visualizations">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Professional
+                            </div>
+                            <div class="project-name">
+                                MySQL Database Visualizations
+                                <br>
+                                <br>
+                               Pulling data from a remote database to create visualizations.
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
             </div>
         </div>
     </div>
