--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -108,6 +108,7 @@
                         </div>
                     </div>
                 </a>
+              </div>
             </div>
         </div>
     </div>
